Fix map-popup text alignment and background color.
Partially resolves bug #884556 (https://bugzilla.mozilla.org/show_bug.cgi?id=884556).
 * do not justify text. Should be aligned left.
 * background should be white

--- a/assets/css/events/map/marker_info_window.less
+++ b/assets/css/events/map/marker_info_window.less
@@ -84,7 +84,7 @@ line-height: 100%;
   margin-bottom: 12px;
 
   line-height:  1.5;
-  text-align:   justify;
+  text-align:   left;
   font-size:    14px;
 }
 
